# kobuki_x_project

kobuki_x_bringup/: CMakeLists.txt  package.xml
kobuki_x_bringup/launch/: bringup.launch  description.launch  description.launch.xml  gmapping.launch  gmapping1.launch  kobuki_xs_gmapping.launch  kobuki_xs_navigation.launch  kobuki_xs_navigation_coffee_bot.launch  navigat_multi.launch  paclidar_gmapping.launch.xml
kobuki_x_bringup/launch/hector/: geotiff_mapper.launch  hector_mapping_default.launch  kobuki_xs_hector_mapping.launch
kobuki_x_bringup/scripts/: coffee_bot_prototype.py
kobuki_x_description/: CMakeLists.txt  package.xml
kobuki_x_description/launch/: ldslidar_for_kobuki_xs.launch  paclidar_for_kobuki_xs.launch  paclidar_pointclound_to_laserscan.launch  rplidara2_for_kobuki_xs.launch  rplidars1_for_kobuki_xs.launch  view_paclidar.launch
kobuki_x_description/launch/rviz/: paclidar.rviz
kobuki_x_description/meshes/bases/: kobuki_x.stl  kobuki_xs.stl
kobuki_x_description/param/: rplidara2_for_kobuki_xs_filter_config.yaml
kobuki_x_description/urdf/bases/: kobuki_x.urdf.xacro  kobuki_xs.urdf.xacro  kobuki_xs_standalone.urdf.xacro
kobuki_x_description/urdf/robots/: kobuki_circle_board_astra.urdf.xacro  kobuki_circle_board_kinect2.urdf.xacro  kobuki_circle_board_kinect2_rplidar_a2.urdf.xacro  kobuki_circle_board_kinect2_rplidar_s1.urdf.xacro  (+2 more)
kokuki_x_project/: CMakeLists.txt  package.xml
line_follower/: CMakeLists.txt  README.md  package.xml
line_follower/launch/: line_follower.launch
line_follower/src/: LineDetect.cpp
(+10 files in other folders)
