    <package>
      <name>kobuki_x_project</name>
      <version>1.0.0</version>
      <description>ROS metapackage for kobuki_x project</description>
      <maintainer email="1121391435@qq.com">WLwind</maintainer>

      <license>TODO</license>

      <buildtool_depend>catkin</buildtool_depend>
      <run_depend>kobuki_x_description</run_depend>
      <run_depend>kobuki_x_bringup</run_depend>
      <run_depend>line_follower</run_depend>

      <export>
        <metapackage/>
      </export>
    </package>
